--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Learn Intermediate OOP by Building a Platformer Game</title>
+    <title>Platformer Game</title>
     <link rel="stylesheet" href="./styles.css" />
 </head>
 
 <body>
     <div class="start-screen">
-        <h1 class="main-title">freeCodeCamp Code Warrior</h1>
+        <h1 class="main-title">Platformer Game</h1>
         <p class="instructions">
             Help the main player navigate to the yellow checkpoints.
         </p>
